--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,63 @@
+/* $color-primary: #ffafbd;
+$color-secondary: #ffc3a0;
+$color-pale: #f8d58a;
+$color-mid: #fa647d;
+$black: #000000; */
+
 body {
   font-family: "Original Surfer", sans-serif;
 }
 
-.card-title {
-  font: 500 1.25rem "Original Surfer", cursive;
+h1, h2, h3, .card-body>.card-title {
+  font-family: "Original Surfer", sans-serif;
+
 }
 
-.card-text {
-  font: 400 1rem "Open Sans", sans-serif;
+.card-title {
+  font-weight: 500;
+  font-size: 1.25rem;
+}
+
+h2 {
+  color: #ffafbd;
 }
 
 .card-img-overlay .card-title {
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.row-content {
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px;
+}
+
+.site-footer {
+  background: #ffc3a0;
+  padding: 20px 0;
+}
+
+.jumbotron {
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #ffafbd, #ffc3a0 90%, #f8d58a);
+  color: white;
+}
+
+.jumbotron h2 {
+  color: white;
+}
+
+.navbar-dark {
+  background-color: #ffc3a0;
+}
+
+.breadcrumb {
+  background-color: #f8d58a; 
+}
+
+a, a:link, a:hover {
+  color: inherit;
+  text-decoration: none; 
 }
