--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,23 @@ a, a:link, a:hover {
   color: inherit;
   text-decoration: none; 
 }
+
+.page-enter {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  transition: 300ms ease-out;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: 300ms ease-in;
+}
